Do not fix background on mobile

--- a/angular_flask/static/src/css/main.css
+++ b/angular_flask/static/src/css/main.css
@@ -7,8 +7,27 @@ body {
     font-size: 16px;
 }
 
+/*body:before {
+  content: "";
+  display: block;
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -10;
+  background: url("../../img/teal.jpg") no-repeat center center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}*/
 #main-view {
-    background: url("../../img/teal.jpg") no-repeat center fixed;
+    background: url("../../img/teal.jpg") center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
 }
 
 /* Fix Chrome 48 flexbog bug */
@@ -258,6 +277,12 @@ md-tooltip .md-content {
     .image-lg {
         height: 15em;
     }
+
+    /* Do not make background fixed on mobile cause it's not well supported*/
+    #main-view {
+        background: url("../../img/teal.jpg") center center;
+    }
+
 }
 
 /*Laptop*/
